osp/static/css/profile-style.css
/* ... */
/* User Profile */
#profile-info {
  width: 20%;
  font-size: 18px;
  transition: margin-top 0.5s ease-in-out 0s, right .5s;
  display: block;
}

#profile-content {
  display: block;
}


.info-body {
  margin: 10px;
  display: block;
  color: white;
  text-align: center;
}

.font-focus {
  font-size: 25px;
  font-weight: 600;
}

/* User Sidebar */
.user-detail {
  background-color: white;
  box-shadow: 0 4px 4px 0 var(--card-box-shadow);
  margin-bottom: 1rem;
  border-bottom-left-radius: 0.625rem;
  border-bottom-right-radius: 0.625rem;
}

.row-userdata {
  flex-direction: row;
  align-items: center;
  border-top: 2px solid var(--profile-nav-border);
  height: 60px;
}

.row-title {
  flex-shrink: 0;
  width: 68px;
  font-weight: 550;
  margin-right: 5px;
}

span.row-txt,
a.row-txt {
  font-size: 18px;
  width: calc(100%-68px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap; 
}

.row-complex {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-between;
}

.row-contr {
  font-size: 14px;
  flex-basis: content;
  flex-grow: 1;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  border-bottom: 1px solid var(--profile-nav-border);
  height: 42px;
}

span.row-raw {
  font-size: 14px;
  width: calc(50%-68px);
  margin-right: 0.5rem;
}

#interests,
#languages,
#portfolio {
  height: 250px;
  overflow: hidden;
}

.expandable {
  -webkit-transition: width 300ms;
  -moz-transition: width 300ms;
  -o-transition: width 300ms;
  transition: width 300ms;
}

.semi-expanded-0,
.semi-expanded-1,
.semi-expanded-2 {
  width: 50% !important;
}

.semi-expanded-1.semi-expanded-2:nth-child(n) {
  order: 1;
}

.semi-expanded-0:nth-child(n),
.semi-expanded-1:nth-child(n),
.semi-expanded-2:nth-child(n) {
  order: 2;
}

.expanded,
.semi-expanded-1.semi-expanded-2 {
  width: 100% !important;
}

.expanded .card {
  height: max-content !important;
}

.expanded:nth-child(1) {
  order: -1;
}

.gbti-content>div.progress {
  margin: 0 0 0.8rem;
  border-radius: 5px;
}
.p-lg {
  padding: 20px 15%;
  width: 100%;
}

.gbti-content>.gbti-img {
  max-width: 350px;
  max-height: 350px;
}

.gbti-img img {
  width: 100%;
  object-fit: cover;
  display: inline-block;
  margin-right: auto;
  margin-left: auto;
}

.icon-lg {
  font-size: 40px;
}

.gbti-card {
  box-shadow: 0 4px 4px 0 var(--card-box-shadow);
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
}

.gbti-textbox {
  padding: 6% 6% 3%;
  background-color: white;
}
.gbti-text.bold {
  font-size: 18px;
}
.gbti-text {
  font-size: 16px;
  font-weight: 500;
  margin-bottom: 0.2rem;
}

.endpoint {
  height: 6px !important;
  width: 6px !important;
  align-items: center;
  border: 1px solid black;
  border-radius: 50%;
  background-color: black;
}

.endpoint.left {
  justify-content: end;
}

.endpoint.right {
  justify-content: start;
}

.line-connect {
  width: 50%;
  height: 1.5px;
  margin-top: 2.25px;
  background-color: black;
  display: inline-block;
}

.pb-inactive {
  background-color: var(--guideline-inactive);
}

.pb-active {
  background-color: var(--main-point-color);
  color: white;
}
.pb-marker{
  width: 100%;
  height: 100%;
  border: 1px solid transparent;
  border-radius: 5px;
}
.gbti-bg {
  background-color: var(--developer-bg-color);
}

.btn-gbti {
  padding: 10px 20px;
  text-align: center;
  box-shadow: 0 2px 4px var(--card-box-shadow);
  border-radius: 10px;
  border: 0;
}

.btn-gbti-group {
  margin: 15px 30px;
}

.gbti-harmony {
  display: flex;
  justify-content: center;
  margin: 20px 20% 10px;
}

.harmony {
  flex: 1 1 auto;
  padding: 2rem 5% 1rem;
}

.gbti-analysis {
  display: flex;
  margin: 5px 6rem 5px;
  gap: 15px
}

.gbti-analysis span {
  font-size: 18px;
  font-weight: 500;
}

.gbti-analysis-container {
  display: flex;
  flex-direction: column;
  width: fit-content;
  justify-content: center;
  margin: auto;
}
.progress {
  border-radius: 0;
}
#visualization {
  min-height: 380px;
}
.col-my-p20 {
  flex: 0 0 auto;
  width: 20%;
}
.gbti-content>div.progress {
  margin-bottom: 2px;
  height: 10px;
}
.gbti-content .text-label {
  font-size: 10px;
  margin-bottom: 2px;
}
.gbti-content>h4 {
  font-size: 16px;
  margin-bottom: 4px;
}
#gbti-id-card{
  margin: 4% 4% 2%;
  padding: 1px 5px;
}
#gbti-btn-group{
  margin: 0 4%;
  padding: 1px 5px;
}
.modal-gbti-card {
  background-color: white;
  box-shadow: 0 4px 4px var(--card-box-shadow);
  border-radius: 15px;
}
.p-sm {
  padding: 1% 4%;
  width: 50%;
}
@media (max-width: 992px) {
  .text-label {
    font-size: 12px;
    margin: 0;
    font-weight: 600;
  }
  .horizontal-menu>button {
    padding: 5px;
    font-size: 12px;
  }
  .grass-color {
    display: block;
    width: 14px;
    height: 14px;
  }
  .grass-group {
    display: flex;
    justify-content: end;
    font-size: 12px;
    align-items: center;
  }
  .nav-link{
    font-size: 14px;
  }
}

@media (max-width: 768px) {
  #profile-info {
    margin-top: 0 !important;
    width: 100%;
  }
  #profile-grid-section{
    width: 100% !important;
  }
  #visualization {
    width: 100%;
  }
  .modal-item {
    width: 100%;
    height: 45vw;
    padding: 0 8%;
    text-align: center;
  }
  .font-focus {
    font-size: 20px;
    font-weight: 500;
  }
}
@media (min-width: 768px) {
  #visualization {
    min-height: 380px;
  }
  .col-my-p20 {
    flex: 0 0 auto;
    width: 20%;
  }
  .gbti-content>div.progress {
    margin-bottom: 2px;
    height: 10px;
  }
  .gbti-content .text-label {
    font-size: 10px;
    margin-bottom: 2px;
  }
  .gbti-content>h4 {
    font-size: 16px;
    margin-bottom: 4px;
  }
  #gbti-id-card{
    margin: 4% 4% 2%;
    padding: 1px 5px;
  }
  #gbti-btn-group{
    margin: 0 4%;
    padding: 1px 5px;
  }
  .modal-gbti-card {
    background-color: white;
    box-shadow: 0 4px 4px var(--card-box-shadow);
    border-radius: 15px;
  }
  .p-sm {
    padding: 1% 4%;
    width: 50%;
  }
}
/* ... */

